<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".DetailCountry">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_phone"
        app:fab_size="normal"
        app:fab_colorNormal="?attr/colorPrimary"
        app:fab_colorPressed="?attr/colorPrimaryVariant"
        android:contentDescription="@string/key_theme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <ImageView
                    android:id="@+id/detail_ic_flag"
                    android:layout_width="134dp"
                    android:layout_height="84dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:minWidth="90dp"
                    android:minHeight="60dp"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/country" />
                <TextView
                    android:id="@+id/detail_tv_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/detail_ic_flag"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:paddingHorizontal="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/country"
                    android:textColor="?attr/colorPrimary"/>
                <TableLayout
                    android:id="@+id/detail_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:layout_alignBottom="@+id/detail_ic_flag"
                    android:paddingStart="15dp"
                    android:paddingEnd="4dp"
                    android:layout_below="@+id/detail_tv_country"
                    android:layout_toStartOf="@+id/detail_ic_flag">
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/total_confirmed"
                            style="@style/displayHead"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/titik_dua"
                            style="@style/displayHead"/>
                        <TextView
                            android:id="@+id/detail_tv_total_confirmed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/zero"
                            style="@style/displayHead"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginVertical="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/total_recovered"
                            style="@style/displayHead"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/titik_dua"
                            style="@style/displayHead"/>
                        <TextView
                            android:id="@+id/detail_tv_total_recovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/zero"
                            style="@style/displayHead"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/total_deaths"
                            style="@style/displayHead"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/titik_dua"
                            style="@style/displayHead"/>
                        <TextView
                            android:id="@+id/detail_tv_total_deaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/zero"
                            style="@style/displayHead"/>
                    </TableRow>
                </TableLayout>
                <androidx.cardview.widget.CardView
                    android:id="@+id/detail_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_total"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="3dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="?attr/colorSecondaryVariant">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">
                        <TableRow>
                            <TextView
                                android:id="@+id/detail_tv_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_marginStart="4dp"
                                android:padding="4dp"
                                android:textColor="?attr/colorOnSecondary"
                                android:textSize="12sp"
                                android:textStyle="bold"/>
                        </TableRow>
                        <TableRow
                            android:background="?attr/colorPrimaryVariant"
                            android:padding="4dp">
                            <TextView
                                style="@style/displayItem"
                                android:text="@string/confirmed"/>
                            <TextView
                                style="@style/displayItem"
                                android:text="@string/recovered"/>
                            <TextView
                                style="@style/displayItem"
                                android:text="@string/deaths"/>
                        </TableRow>
                        <TableRow
                            android:background="?attr/colorPrimaryVariant"
                            android:padding="4dp">
                            <TextView
                                android:id="@+id/detail_tv_confirmed"
                                style="@style/displayItem"
                                android:textColor="@color/confirmed"
                                android:text="@string/zero"/>
                            <TextView
                                android:id="@+id/detail_tv_recovered"
                                style="@style/displayItem"
                                android:textColor="@color/recovered"
                                android:text="@string/zero"/>
                            <TextView
                                android:id="@+id/detail_tv_deaths"
                                style="@style/displayItem"
                                android:textColor="@color/death"
                                android:text="@string/zero"/>
                        </TableRow>
                    </TableLayout>

                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:id="@+id/detail_progress1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@+id/detail_new"
                    android:layout_alignParentTop="true"
                    style="@style/Widget.AppCompat.ProgressBar"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B9FFFFFF">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/detail_lineChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="275dp"
                android:background="@color/white"
                android:layout_margin="10dp"/>
            <ProgressBar
                android:id="@+id/detail_progress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="@style/Widget.AppCompat.ProgressBar"/>
        </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>