<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/main_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="50sp"
            android:textStyle="bold"
            android:shadowDx="2"
            android:shadowDy="4"
            android:shadowRadius="3"
            android:shadowColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/main_tv_by"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_tv_title"
            android:layout_alignEnd="@+id/main_tv_title"
            android:layout_marginEnd="-20dp"
            android:layout_marginTop="-10dp"
            android:fontFamily="cursive"
            android:text="@string/by_agil"
            android:textSize="25sp"
            android:textColor="?attr/colorSecondary"/>
        <TextView
            android:id="@+id/main_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/main_display_world"
            android:layout_marginStart="20dp"/>
        <RelativeLayout
            android:id="@+id/main_display_world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_below="@+id/main_tv_by">
            <TextView
                android:id="@+id/world_tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:layout_marginStart="20dp"
                android:text="@string/second_title1"
                android:textSize="18sp"
                android:textColor="#16BCCF"
                android:fontFamily="sans-serif-condensed-medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/world_tv_status"
                android:layout_below="@+id/world_tv_status"
                android:layout_marginEnd="-20dp"
                android:layout_marginTop="-5dp"
                android:text="@string/second_title2"
                android:textSize="18sp"
                android:textColor="#16BCCF"
                android:fontFamily="sans-serif-condensed-medium"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/world_tv_status"
                android:layout_marginStart="35dp">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:fontFamily="monospace"
                        android:text="@string/confirmed"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:fontFamily="monospace"
                        android:text="@string/titik_dua"/>
                    <TextView
                        android:id="@+id/main_tv_world_positive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:text="@string/zero"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:fontFamily="monospace"
                        android:text="@string/recovered"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:fontFamily="monospace"
                        android:text="@string/titik_dua"/>
                    <TextView
                        android:id="@+id/main_tv_world_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:text="@string/zero"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:fontFamily="monospace"
                        android:text="@string/deaths"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:fontFamily="monospace"
                        android:text="@string/titik_dua"/>
                    <TextView
                        android:id="@+id/main_tv_world_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="12sp"
                        android:text="@string/zero"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">
        <LinearLayout
            android:id="@+id/main_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="?attr/colorPrimaryVariant"
            android:orientation="vertical">
            <SearchView
                android:id="@+id/main_sv"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="4dp"
                android:background="?attr/colorSecondaryVariant"
                android:clickable="true"
                android:focusable="true"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/main_rg"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/out_line"
                    android:padding="2dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/main_rb_reset"
                        android:layout_width="@dimen/item_ic"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:button="@null"
                        android:background="@drawable/toggle_bg"/>
                    <RadioButton
                        android:id="@+id/main_rb_confirmed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed"
                        android:textColor="@color/confirmed"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_bg"/>
                    <RadioButton
                        android:id="@+id/main_rb_recovered"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textColor="@color/recovered"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:button="@null"
                        android:padding="4dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_bg"/>
                    <RadioButton
                        android:id="@+id/main_rb_death"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:textColor="@color/death"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:button="@null"
                        android:padding="4dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_bg"/>
                </RadioGroup>
                <ImageView
                    android:layout_width="@dimen/item_ic"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/main_rg"
                    android:layout_alignTop="@id/main_rg"
                    android:layout_alignBottom="@id/main_rg"
                    android:src="@drawable/ic_rows"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="12dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/key_theme" />
            </RelativeLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_rv_countries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/main_display"
            tools:listitem="@layout/item_list" />

        <ProgressBar
            android:id="@+id/main_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:progressBackgroundTint="?attr/colorPrimary"
            style="@style/Widget.AppCompat.ProgressBar"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:focusable="true"
            android:clickable="true"
            android:src="@drawable/ic_phone"
            app:fab_size="normal"
            app:fab_colorNormal="?attr/colorPrimary"
            app:fab_colorPressed="?attr/colorPrimaryVariant"
            android:contentDescription="@string/key_theme" />
    </RelativeLayout>

</LinearLayout>